# student-web

./: .gitignore  LICENSE  README.md  WebPage.cabal
blurbs/: me.md  recitation.md  research-overview.md  teaching.md
css/: default.css
haskell/: Main.hs
haskell/WebPage/: Pubs.hs
haskell/WebPage/Generate/: Context.hs  Rules.hs
haskell/WebPage/Pubs/: Database.hs  Paper.hs  Raw.hs  ToHtml.hs
pages/: index.html  publications.html  teaching.html
presentations/mobihoc14/assets/: header.json  header.jsonp
presentations/mobihoc14/assets/01AFA6BD-3630-4757-9A8A-C7C6645576C2/: 01AFA6BD-3630-4757-9A8A-C7C6645576C2.json  01AFA6BD-3630-4757-9A8A-C7C6645576C2.jsonp
presentations/mobihoc14/assets/03941B2E-9493-4255-82A0-C0448479B06C/: 03941B2E-9493-4255-82A0-C0448479B06C.json  03941B2E-9493-4255-82A0-C0448479B06C.jsonp
presentations/mobihoc14/assets/0F2EF73D-F45A-4340-9170-0D61FFA41278/: 0F2EF73D-F45A-4340-9170-0D61FFA41278.json  0F2EF73D-F45A-4340-9170-0D61FFA41278.jsonp
presentations/mobihoc14/assets/144106BE-2954-4265-90A4-AE305B6F817F/: 144106BE-2954-4265-90A4-AE305B6F817F.json  144106BE-2954-4265-90A4-AE305B6F817F.jsonp
presentations/mobihoc14/assets/1E2A58E7-5303-4960-97AF-64DA42949FFE/: 1E2A58E7-5303-4960-97AF-64DA42949FFE.json  1E2A58E7-5303-4960-97AF-64DA42949FFE.jsonp
presentations/mobihoc14/assets/2398AFDF-BFE8-4E70-B1AF-6278142E9F2A/: 2398AFDF-BFE8-4E70-B1AF-6278142E9F2A.json  2398AFDF-BFE8-4E70-B1AF-6278142E9F2A.jsonp
templates/: base.html  navbar.html  publications.html
(+3106 files in other folders)
