name:           BruceLi-WebPage
version:        1.0
synopsis:       My academic web page.
homepage:       http://www-student.cse.buffalo.edu/~muyuanli
license:        OtherLicense
license-file:   LICENSE
author:         Bruce Li
maintainer:     leilmyxwz@gmail.com
category:       Web
build-type:     Simple
cabal-version:  >= 1.8
description:
  Statically generates my academic web page. Largely inspired by
  Eric Walkingshaw's Hakyll-based web page:
  http://web.engr.oregonstate.edu/~walkiner/

executable web
  main-is:         Main.hs
  hs-source-dirs:  haskell
  build-depends:   base == 4.6.*,
                   containers == 0.5.*,
                   filepath == 1.3.*,
                   blaze-html >= 0.6.0,
                   hakyll == 4.5.*,
                   pandoc == 1.12.*
